--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
       <h1>Solar System Project<br></h1>
     </div>
     <div id="data">
-      <a class="sun" title="sun" href="C:\Onedrive\solar-system-project\sun.html" target="_blank" >Sun</a>
-      <a class="mercury" title="mercury" href="C:\Onedrive\solar-system-project\mercury.html" target="_blank" >Mercury</a>
-      <a class="venus" title="venus" href="C:\Onedrive\solar-system-project\venus.html" target="_blank" >Venus</a>
-      <a class="earth active" title="earth" href="C:\Onedrive\solar-system-project\Earth.html" target="_blank" >Earth</a>
-      <a class="moon" title="moon" href="C:\Onedrive\solar-system-project\moon.html" target="_blank" >Moon</a>
-      <a class="mars" title="mars" href="C:\Onedrive\solar-system-project\mars.html" target="_blank" >Mars</a>
-      <a class="jupiter" title="jupiter" href="C:\Onedrive\solar-system-project\jupiter.html" target="_blank" >Jupiter</a>
-      <a class="saturn" title="saturn" href="C:\Onedrive\solar-system-project\saturn.html" target="_blank" >Saturn</a>
-      <a class="uranus" title="uranus" href="C:\Onedrive\solar-system-project\uranus.html" target="_blank" >Uranus</a>
-      <a class="neptune" title="neptune" href="C:\Onedrive\solar-system-project\neptune.html" target="_blank" >Neptune</a>
-      <a class="pluto" title="pluto" href="C:\Onedrive\solar-system-project\pluto.html" target="_blank" >Pluto</a>
-      <a class="asteroid-belt" title="asteroid-belt" href="C:\Onedrive\solar-system-project\asteroid-belt.html" target="_blank" >Asteroid Belt</a>
+      <a class="sun" title="sun" href="sun.html" target="_blank" >Sun</a>
+      <a class="mercury" title="mercury" href="mercury.html" target="_blank" >Mercury</a>
+      <a class="venus" title="venus" href="venus.html" target="_blank" >Venus</a>
+      <a class="earth active" title="earth" href="Earth.html" target="_blank" >Earth</a>
+      <a class="moon" title="moon" href="moon.html" target="_blank" >Moon</a>
+      <a class="mars" title="mars" href="mars.html" target="_blank" >Mars</a>
+      <a class="jupiter" title="jupiter" href="jupiter.html" target="_blank" >Jupiter</a>
+      <a class="saturn" title="saturn" href="saturn.html" target="_blank" >Saturn</a>
+      <a class="uranus" title="uranus" href="uranus.html" target="_blank" >Uranus</a>
+      <a class="neptune" title="neptune" href="neptune.html" target="_blank" >Neptune</a>
+      <a class="pluto" title="pluto" href="pluto.html" target="_blank" >Pluto</a>
+      <a class="asteroid-belt" title="asteroid-belt" href="asteroid-belt.html" target="_blank" >Asteroid Belt</a>
       <a class="credits" title="Credits" href="https://solar-system-project.github.io/credits/" target="_blank" >Credits</a>
     </div>
     <div id="universe" class="scale-stretched">
@@ -121,12 +121,12 @@
       document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
     </script>
-    <script src="js/prefixfree.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <script src="prefixfree.min.js"></script>
+    <script src="scripts.min.js"></script>
   </body>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="js/index.js"></script>
+        <script src="index.js"></script>
 
 <script type="text/javascript" src="//counter.websiteout.net/js/7/5/4908/0"></script>
 <script>
