--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
 
-    <video id="videobg" src="C:\Onedrive\solar-system-project-original\images\project-vid.mp4" poster="C:\Onedrive\solar-system-project-original\images\poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body class="opening hide-UI view-3D zoom-large data-close controls-close">
     <div id="navbar">
