--- a/moon.html
+++ b/moon.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Moon</title>
-    <link rel="shortcut icon" type="image/png" href="C:\Users\Binika\Desktop\sss\css-3d-solar-system\images\favicon.png">
-    <link rel="stylesheet" href="C:\Onedrive\solar-system-project\css\style.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
 
   </head>
   <body>
-    <video id="videobg" src="C:\Onedrive\solar-system-project-original\images\project-vid.mp4" poster="C:\Onedrive\solar-system-project-original\images\poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
         <div id="mySidenav" class="sidenav" onclick="window.close();">
