--- a/pluto.html
+++ b/pluto.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Pluto</title>
-    <link rel="shortcut icon" type="image/png" href="C:\Users\Binika\Desktop\sss\css-3d-solar-system\images\favicon.png">
-    <link rel="stylesheet" href="C:\Onedrive\solar-system-project\css\style.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
   </head>
   <body>
-    <video id="videobg" src="C:\Onedrive\solar-system-project-original\images\project-vid.mp4" poster="C:\Onedrive\solar-system-project-original\images\poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
         <div id="mySidenav" class="sidenav">
@@ -27,7 +27,7 @@
   <li>An interesting fact: The decision made in the year 2006 witnessed widespread outrage on behalf of Pluto. Along with the updates of the textbooks came the onslaught of several internet-spawned memes picturing Pluto going from angry to sad in a range of emotions.</li>
 </ul>
 
-<img class="earth-img1" src="C:\Onedrive\solar-system-project\images\pluto-planet-removebg-preview.png" alt="">
+<img class="earth-img1" src="pluto-planet-removebg-preview.png" alt="">
 <img class="earth-img2" src="https://static.businessinsider.com/image/5d0022066fc92031cf16fbc5" alt="">
 <img class="earth-img3" src="https://www.fieldmuseum.org/sites/default/files/styles/3x2_1400w/public/ckearney/2016/08/24/pluto_header.jpg?itok=AJu6QQDO" alt="">
 
