--- a/venus.html
+++ b/venus.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Venus</title>
-    <link rel="shortcut icon" type="image/png" href="C:\Users\Binika\Desktop\sss\css-3d-solar-system\images\favicon.png">
-    <link rel="stylesheet" href="C:\Onedrive\solar-system-project\css\style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <video id="videobg" src="C:\Onedrive\solar-system-project-original\images\project-vid.mp4" poster="C:\Onedrive\solar-system-project-original\images\poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
     <div id="navbar">
@@ -25,7 +25,7 @@
   <li>Surface temperature: 740K (467 degree centigrade, 872 degree Fahrenheit  </li>
 </ul>
 
-<img class="earth-img1" src="C:/Onedrive/solar-system-project/images/venus.png" alt="">
+<img class="earth-img1" src="venus.png" alt="">
 <img class="venus-img2" src="https://solarstory.net/img/articles/big/position-of-venus.jpg" alt="">
 <img class="venus-img3" src="https://explanet.info/images/Ch07/07_11_internalstructure.jpg" alt="">
 
