--- a/neptune.html
+++ b/neptune.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <video id="videobg" src=project-vid.mp4" poster="poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
         <div id="mySidenav" class="sidenav" onclick="window.close();">
