--- a/uranus.html
+++ b/uranus.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <video id="videobg" src="C:\Onedrive\solar-system-project-original\images\project-vid.mp4" poster="C:\Onedrive\solar-system-project-original\images\poster.png" autoplay muted loop >
+    <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
         <div id="mySidenav" class="sidenav" onclick="window.close();">
