--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a class="sun" title="sun" href="sun.html" target="_blank" >Sun</a>
       <a class="mercury" title="mercury" href="mercury.html" target="_blank" >Mercury</a>
       <a class="venus" title="venus" href="venus.html" target="_blank" >Venus</a>
-      <a class="earth" title="earth" href="Earth.html" target="_blank" >Earth</a>
+      <a class="earth" title="earth" href="earth.html" target="_blank" >Earth</a>
       <a class="moon" title="moon" href="moon.html" target="_blank" >Moon</a>
       <a class="mars" title="mars" href="mars.html" target="_blank" >Mars</a>
       <a class="jupiter" title="jupiter" href="jupiter.html" target="_blank" >Jupiter</a>
