--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="data">
       <a class="sun" title="sun" href="sun.html" target="_blank" >Sun</a>
-      <a class="mercury" title="mercury" href="mercury.html" target="_blank" >Mercury</a>
+      <a class="mercury" title="mercury" href="mercury2.html" target="_blank" >Mercury</a>
       <a class="venus" title="venus" href="venus.html" target="_blank" >Venus</a>
       <a class="earth" title="earth" href="earth2.html" target="_blank" >Earth</a>
       <a class="moon" title="moon" href="moon.html" target="_blank" >Moon</a>
