--- a/mercury2.html
+++ b/mercury2.html
@@ -12,6 +12,10 @@
     <video id="videobg" src="project-vid.mp4" poster="poster.png" autoplay muted loop >
 </video>
       <body>
+         <div id="mySidenav" class="sidenav">
+          <a href="index.html" id="back" onclick="window.close();">Back</a>
+
+        </div>
     <div id="navbar">
       <h1 class="earth-title">MERCURY<br></h1>
 
