--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a class="uranus" title="uranus" href="uranus.html" target="_blank" >Uranus</a>
       <a class="neptune" title="neptune" href="neptune.html" target="_blank" >Neptune</a>
       <a class="pluto" title="pluto" href="pluto.html" target="_blank" >Pluto</a>
-            <a class="kaiper-belt" title="kaiper-belt" href="pluto.html" target="_blank" >Kuiper Belt </a>
+      <a class="kaiper-belt" title="kaiper-belt" href="kaiper-belt.html" target="_blank" >Kuiper Belt </a>
       <a class="asteroid-belt" title="asteroid-belt" href="asteroid-belt.html" target="_blank" >Asteroid Belt</a>
       <a class="credits" title="Credits" href="https://solar-system-project.github.io/credits/" target="_blank" >Credits</a>
     </div>
