--- a/sun2.html
+++ b/sun2.html
@@ -13,7 +13,7 @@
 </video>
       <body>
         <div id="mySidenav" class="sidenav" onclick="window.close();">
-          <a href="index.html" id="back">Back</a>
+          <a href="index.html" id="baffck">Back</a>
 
         </div>
     <div id="navbar">
